--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.2",
     "@mui/icons-material": "^5.14.15",
+    "@tanstack/react-table": "^8.10.7",
     "material-icons": "^1.13.12",
     "next": "13.5.4",
     "react": "^18",
